Closed Bug 809956 Opened 11 years ago Closed 11 years ago

An odd number of ] characters before ]]> makes the HTML parser ignore ]]> in a CDATA section

Categories

(Core :: DOM: HTML Parser, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: accelerate9, Assigned: hsivonen)

Details

Attachments

(2 files, 1 obsolete file)

Attached image Pruf
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:16.0) Gecko/20100101 Firefox/16.0
Build ID: 20121027181922

Steps to reproduce:

Show my XML source


Actual results:

Improper lighting source XML with CDATA directive


Expected results:

Correct lighting source XML with CDATA directive
Component: Untriaged → HTML: Parser
Product: Firefox → Core
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
OS: Linux → All
QA Contact: hsivonen
Hardware: x86_64 → All
Summary: Improper lighting source XML with CDATA directive → An odd number of ] characters before ]]> makes the HTML parser ignore ]]> in a CDATA section
Version: 16 Branch → Trunk
Assignee: nobody → hsivonen
QA Contact: hsivonen
Comment on attachment 680035 [details] [diff] [review]
Deal with ] after already seeing ]]

Again -w patch might be easier to review.
Comment on attachment 680035 [details] [diff] [review]
Deal with ] after already seeing ]]

In any case, this needs some comments. The handling of ] is now pretty
confusing for someone not too familiar with token handler.
Attachment #680035 - Flags: review?(bugs) → review-
This patch adds a comment. The comment is only on the .java side. Carrying it over to the .cpp side is *way* outside the scope of this bug. (Requires hacking the parser the translator uses; bug 559547.)
Attachment #680035 - Attachment is obsolete: true
Attachment #680544 - Flags: review?(bugs)
Attachment #680544 - Flags: review?(bugs) → review+
https://hg.mozilla.org/mozilla-central/rev/0a19ff77bee4
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
Ilya, thanks for reporting. As noted in the target milestone, the fix is expected to be in Firefox 19.
Not at all
You need to log in before you can comment on or make changes to this bug.